<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".VoiPhoneActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_mono_medium"
        android:text="@string/geben_sie_bitte_ihre_telefonnummer_an"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <EditText
        android:id="@+id/et_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/UserPhone"
        android:inputType="phone"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_phoneSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phoneNumber" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="202dp"
        android:layout_height="116dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="600dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/voi_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>