<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="296dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:text="@string/geben_sie_bitte_ihre_e_mail_an"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="200dp"
        android:text="@string/register"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:fontFamily="@font/roboto_mono_thin"
        android:hint="@string/UserEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/register_company_Logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:srcCompat="@drawable/bird_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>